--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.26.1",
+    "@clerk/themes": "^1.7.9",
     "@hookform/resolvers": "^3.3.1",
     "@prisma/client": "^5.4.2",
     "@radix-ui/react-checkbox": "^1.0.4",
